# dexter-dummy-predictor

./: .arcconfig  Dockerfile  README.md  constraints.txt  dev-requirements.txt  main.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: build-push.yaml  build-test-push.yaml  trivy.yaml
test/: 1.expected.json  1.json  2.expected.json  2.json  3.expected.json  3.json  4.expected.json  4.json  5.expected.json  5.json  test_samples.py
