[project]
name = "dexter-dummy-predictor"
version = "0.1.0"
description = ""
requires-python = "3.11.11"
dependencies = [
    "fastapi (==0.115.8)",
    "uvicorn (==0.34.0)",
    "pydantic (==1.10.19)",
    "spacy (==3.8.3)",
    "nltk (==3.9.1)",
    "pandas (==2.2.3)",
    "setuptools (==75.8.0)",
    "starlette (==0.45.3)",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "tqdm (==4.67.1)",
    "jinja2 (==3.1.5)",
    "requests (==2.32.3)",
    "certifi (==2025.1.31)",
    "pytest (==8.3.4)",
    "httpx (==0.28.1)",
    # https://github.com/explosion/cython-blis/issues/117#issuecomment-2596810409
    # https://github.com/explosion/cython-blis/issues/116#issuecomment-2588656015
    "blis (==1.1.0)",
    "thinc (==8.3.3)"
]

[tool.poetry.dependencies]
blis = "==1.1.0"

[build-system]
requires = [
    "blis==1.1.0",
    "thinc==8.3.3"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "20.8b1"
flake8 = "3.8.4"
mypy = "1.15.0"
